some bug fixed